# df_site

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  package.json  pnpm-lock.yaml  prometheus.yaml  pyproject.toml  tox.ini  webpack.config.js
.github/workflows/: basic_unittests.yml  publish.yml
demo/: __init__.py  __main__.py  admin.py  app.py  defaults.py  urls.py  views.py
demo/templates/demo/: demo.html  index.html  popup_demo.html
df_site/: __main__.py  admin.py  app.py  context_processors.py  defaults.py  dynamic_settings.py  form_fields.py  models.py  urls.py  user_settings.py  views.py
df_site/components/: base.py  detail.py  list.py  list_filters.py
df_site/postman/: urls.py
df_site/static/css/: base.css  ckeditor5.css  ckeditor5.css.map
df_site/static/js/: app.js
df_site/templates/df_site/: app.html  base.html  manage_base.html
df_site/templates/df_site/components/: detail.html  detail_fieldset.html  list.html  list_filter.html
df_site/templatetags/: df_site.py  images.py
df_site/testing/: multiple_views.py  requests.py
df_site/users/: urls.py
df_site_js/components/: _ribbons.scss
modersite/: admin.py  defaults.py  models.py  urls.py  views.py
modersite/components/: base.py  detail.py  list.py  list_filters.py
modersite/migrations/: 0003_alertribbon.py  0004_alertribbon_resume_alertribbon_url.py  0005_remove_alertribbon_resume_alertribbon_summary.py
modersite/templates/: index.html
modersite/templates/django_bootstrap5/: breadcrumb.html
modersite/templates/modersite/: app.html  base.html  detail.html  popup_base.html
modersite/templates/modersite/components/: detail.html  detail_fieldset.html  list.html  list_filter.html  list_filters.html  list_hierarchy.html  list_pagination.html  list_search_form.html  list_table.html
modersite/templatetags/: modersite.py  nonadmin.py
paint_manager/: __init__.py  __main__.py  admin.py  apps.py  compare.py  context_processors.py  defaults.py  filters.py  forms.py  iniconf.py  lists.py  models.py  urls.py  utils.py  views.py
paint_manager/initialization/: __init__.py  encycolorpedia.py  equiv1001.py  equivalences.py  load.py  npm67.py
paint_manager/migrations/: 0001_initial.py  0002_paint_sort_reference.py  __init__.py
paint_manager/static/paint_manager/: colors.js
paint_manager/templates/df_site/: app.html
paint_manager/templates/df_site/paint_manager/paint/: detail.html
paint_manager/templates/paint_manager/: add_paint.html  index.html  similar_paints.html  user_paint_stock.html  userpaint_confirm_delete.html  userpaint_form.html
test_paint_manager/: __init__.py  test_admin.py
tests_df_site/: test_admin.py
