[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.0,<0.12.0"]

[dependency-groups]
dev = [
  "black>=26.3.1,<27",
  "coverage>=7.6.1,<8",
  "daphne>=4.1.2,<5",
  "django-debug-toolbar>=6.3.0,<7",
  "djt-csp>=0.9.9,<0.10",
  "djt-nvu>=0.9.2,<0.10",
  "djt-og>=0.9.7,<0.10",
  "greenlet>=3.1.1,<4",
  "hypothesis>=6.115.5,<7",
  "ipython>=9.12.0,<10",
  "poetry>=2.3.3,<3",
  "pytest>=9.0.2,<10",
  "pytest-django>=4.9.0,<5",
  "pytest-env>=1.6.0,<2"
]
shell = ["ipython>=9.12.0,<10"]

[project]
authors = [{name = "d9pouces", email = "github@19pouces.net"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 5.0",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Natural Language :: English",
  "Natural Language :: French",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "df-config>=1.2.42",
  "df-websockets>=1.0.9,<2",
  "django>=5.0",
  "django-allauth[mfa, socialaccount]>=65.11.2,<66",
  "django-bootstrap5>=23.3",
  "django-ckeditor-5>=0.2.13,<0.3",
  "django-cookie-consent>=1.0.0,<2",
  "django-csp>=4.0,<5",
  "django-minio-storage>=0.5.7,<0.6",
  "django-pipeline>=4.1.0,<5",
  "django-postman>=4.5,<5",
  "django-prometheus>=2.4.1,<3",
  "django-prose-editor>=0.25.1,<0.26",
  "django-recaptcha>=4.1.0,<5",
  "django-redis>=6.0.0,<7",
  "django-redis-sessions>=0.6.2,<0.7",
  "django-tinymce>=5.0.0,<6",
  "fido2>=2.0.0,<3",
  "jsmin>=3.0.1,<4",
  "lxml-html-clean>=0.4.1,<0.5",
  "nh3>=0.3.0,<0.4",
  "psycopg[binary]>=3.2.10,<4",
  "redis>=7.4.0,<8",
  "uvicorn-worker>=0.4.0,<0.5"
]
description = "More batteries to Django"
license = "CECILL-B"
maintainers = [{name = "d9pouces", email = "github@19pouces.net"}]
name = "df_site"
readme = "README.md"
requires-python = ">=3.12,<4"
version = "0.1.10"

[project.scripts]
df_site-ctl = "df_config.management:manage"

[project.urls]
Documentation = "https://github.com/d9pouces/df_site"
Repository = "https://github.com/d9pouces/df_site"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "df_config.config.base"
minversion = "6.0"
required_plugins = "pytest-django"
testpaths = ["df_site_tests"]

[tool.pytest_env]
DF_CONF_NAME = "df_site"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "E",
  "EXE",
  "F",
  "D",
  "DJ",
  "I",
  "N",
  "UP",
  "S",
  "W"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["df_site"]
module-root = ""
